depoyment/k8s/gateway/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeecg-gateway
  namespace: jeecg
  labels:
    app: jeecg-gateway
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeecg-gateway
      version: v1
  template:
    metadata:
      labels:
        app: jeecg-gateway
        version: v1
    spec:
      containers:
        - name: jeecg-system
          image: registry.cn-hangzhou.aliyuncs.com/sinotopia/jeecg-cloud-gateway:2022.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: httpd
              containerPort: 8080
            - name: actuator
              containerPort: 8080
          volumeMounts:
            - name: nacos-home
              mountPath: /home/nacos
            - name: logs-home
              mountPath: /home/logs
            - name: logs-app
              mountPath: /app/logs
          lifecycle:
            preStop:
              httpGet:
                scheme: HTTP
                port: actuator
                path: /actuator/shutdown
          startupProbe:
            httpGet:
              path: /actuator/health
              port: actuator
            initialDelaySeconds: 120
            failureThreshold: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 15
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: actuator
            initialDelaySeconds: 180
          resources:
            requests:
              cpu: "50m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
      volumes:
        - name: nacos-home
          persistentVolumeClaim:
            claimName: home-nacos
        - name: logs-home
          persistentVolumeClaim:
            claimName: home-logs-gateway
        - name: logs-app
          persistentVolumeClaim:
            claimName: app-logs-gateway
